# swampyer-rs

./: .gitignore  Cargo.toml  partitions.csv  sdkconfig.defaults
scripts/generator/: build-entries.py  entry-template.rs  messages.py  serde-json-entry-template.rs
src/: build-messages.py  errors.rs  lib.rs  main.rs  messages.rs  secrets.rs.template  serialization.rs
swampyer/: Cargo.toml
swampyer/src/: client.rs  errors.rs  lib.rs  serialization.rs
swampyer/src/client/: transport.rs
swampyer_derive/: Cargo.toml
swampyer_derive/src/: lib.rs
