[package]
name = "play003"
version = "0.1.0"
authors = ["esp"]
edition = "2021"
resolver = "2"

[profile.release]
opt-level = "s"

[patch.crates-io]
smol = { git = "https://github.com/esp-rs-compat/smol" }
polling = { git = "https://github.com/esp-rs-compat/polling" }
socket2 = { git = "https://github.com/esp-rs-compat/socket2" }
getrandom = { version = "0.2", git = "https://github.com/esp-rs-compat/getrandom.git" }

[profile.dev]
debug = true # Symbols are nice and they don't increase the size on Flash
opt-level = "z"

[features]
pio = ["esp-idf-sys/pio"]
qemu = []
default = ["experimental"]
experimental = ["esp-idf-svc/experimental", "esp-idf-hal/experimental", "embedded-svc/experimental"]

[dependencies]
esp-idf-sys = { version = "0.31.6", features = ["binstart"] }
esp-idf-svc = "0.42.1"
esp-idf-hal = "0.38"
embedded-svc = "0.22"
embedded-hal = "0.2"

# Async support
smol = "1.2.5"
async-channel = "1.7.1"
async-mutex = "1.4.0"
futures = "0.3.24"
async-std = "1.12.0"

# Used for WAMP protocol
bytes = "1.2.1"
serde = { version = "1.0.142", features = ["derive"] }
serde_json = "1.0.83"
derive_builder = "0.11.2"

[build-dependencies]
embuild = "0.29"
anyhow = "1"
