[package]
name = "swampyer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

swampyer_derive = { path = "./swampyer_derive" }

paste = "1.0"
derive_builder = "0.11.2"
miniserde = "0.1.27"
minicbor = "0.18.0"
minicbor-derive = "0.12.0"

