[package]
name = "swampyer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# Async support
smol = "1.2.5"
async-channel = "1.7.1"
async-mutex = "1.4.0"

paste = "1.0"
derive_builder = "0.11.2"

bytes = "1.2.1"
minicbor = "0.18.0"
minicbor-derive = "0.12.0"

# For debugging
cap = "0.1.1"

